# ai-ticket

./: .gitignore  pyproject.toml  setup.cfg
src/ai_ticket/backends/: pyjira.py
src/ai_ticket/events/: inferencejira.py
